--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -751,6 +751,8 @@
   "unsubmitYourProject": "Unsubmit your project",
   "unsubmitYourProjectConfirm": "Unsubmitting your project will reset the submitted date, really unsubmit?",
   "usingOneHint": "Using just one hint!",
+  "verifiedResourcesDetails": "This course provides extra resources which are only available to verified teachers.",
+  "verifiedResourcesNotice": "Accessing locked lessons and answer keys",
   "video": "Video",
   "videos": "Videos",
   "viewAllAnnouncements": "View all announcements",
