--- a/dashboard/config/locales/en.yml
+++ b/dashboard/config/locales/en.yml
@@ -850,9 +850,9 @@ en:
     optional_stages: 'Optional Stages'
     main_course: 'Main Course'
     extra_course_content: 'Extra Course Content'
-    csf_e_1: 'Ramp Up to Course E'
+    csf_e_1: 'Ramp Up to Course E (Optional)'
     csf_e_2: 'Course E Content'
-    csf_f_1: 'Ramp Up to Course E'
+    csf_f_1: 'Ramp Up to Course F (Optional)'
     csf_f_2: 'Course F Content'
     csd1_1: 'Chapter 1: The Problem Solving Process'
     csd1_2: 'Chapter 2: Computers and Problem Solving'
