Courses: Administrator Resources two-column action block
With some refactoring to generalise the existing two-column action block that was previously only used for Find Local Class.

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -9,6 +9,10 @@
   "addStudentsSyncThirdParty": "Sync my list of students from an existing classroom section in a third party tool",
   "addStudentsToSectionInstructions": "Choose how you want to add your students:",
   "administrator": "Administrator",
+  "administratorResourcesButton": "View resources",
+  "administratorResourcesDescription": "View resources on how to get started or expand computer science opportunities.",
+  "administratorResourcesHeading": "Administrators: Expand computer science in your school or district",
+  "administratorResourcesSubheading": "Administrator Guide",
   "administrators": "Administrators",
   "age": "Age",
   "allHandouts": "All Handouts",
