--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -233,6 +233,8 @@
   signup_header: 'Organize an Hour of Code during %{campaign_date}, and register it here.'
   signup_name_label: 'Your name'
   signup_email_label: 'Your email'
+  signup_nces_school_label: 'Find your school'
+  signup_nces_school_not_found: 'Not found'
   signup_organization_name_label: 'School or organization name'
   signup_event_type_label: 'Event type'
   signup_event_entire_school_label: 'My entire school is participating'
