--- a/apps/i18n/common/tr_tr.json
+++ b/apps/i18n/common/tr_tr.json
@@ -788,5 +788,10 @@
   "yourSchoolParentDesc": "Bilgisayar Bilimlerini okulunuzda veya çevrenizde yaygınlaştırmak için harekete geçin",
   "yourSchoolTeacherButton": "Öğretmeye başlayın",
   "yourSchoolTeacherDesc": "Bugün öğretmeye başla, deneyim gerekli değil",
-  "yourSchoolTellUs": "Okulunuzdaki Bilgisayar Bilimleri Eğitiminden bahset"
+  "yourSchoolTellUs": "Okulunuzdaki Bilgisayar Bilimleri Eğitiminden bahset",
+  "administratorResourcesDescription": "View these resources to get started on expanding computer science opportunities.",
+  "administratorResourcesHeading": "Administrators: Expand computer science in your school or district",
+  "administratorResourcesSubheading": "Administrator Guide",
+  "verifiedResourcesDetails": "This course provides extra resources which are only available to verified teachers.",
+  "verifiedResourcesNotice": "Accessing locked lessons and answer keys"
 }
