--- a/i18n/locales/source/blockly-mooc/common.json
+++ b/i18n/locales/source/blockly-mooc/common.json
@@ -9,6 +9,9 @@
   "addStudentsSyncThirdParty": "Sync my list of students from an existing classroom section in a third party tool",
   "addStudentsToSectionInstructions": "Choose how you want to add your students:",
   "administrator": "Administrator",
+  "administratorResourcesDescription": "View these resources to get started on expanding computer science opportunities.",
+  "administratorResourcesHeading": "Administrators: Expand computer science in your school or district",
+  "administratorResourcesSubheading": "Administrator Guide",
   "administrators": "Administrators",
   "age": "Age",
   "all": "All",
