--- a/apps/i18n/common/tr_tr.json
+++ b/apps/i18n/common/tr_tr.json
@@ -792,6 +792,8 @@
   "administratorResourcesDescription": "View these resources to get started on expanding computer science opportunities.",
   "administratorResourcesHeading": "Administrators: Expand computer science in your school or district",
   "administratorResourcesSubheading": "Administrator Guide",
+  "newSectionAdd": "Add a new classroom section",
+  "newSectionCreate": "Create a new section",
   "verifiedResourcesDetails": "This course provides extra resources which are only available to verified teachers.",
   "verifiedResourcesNotice": "Accessing locked lessons and answer keys"
 }
