--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -647,6 +647,7 @@
   "feedbackDownloadOverview": "This CSV file contains all feedback you’ve completed for your section {sectionName} in levels within **{scriptName}**. You can leave feedback for your students by going to a level in this unit, viewing a student's work, and clicking the \"Feedback\" tab.",
   "feedbackDownloadRecommendation": "We recommend checking student progress and giving feedback on levels marked as assessment opportunities.",
   "feedbackFrom": "Feedback from {teacher}",
+  "feedbackLastUpdated": "Last updated",
   "feedbackLoadError": "There's been an error establishing a connection to our servers. Please refresh the page and try again.",
   "feedbackNoneYet": "You do not have any feedback on any lessons from your teacher(s) yet.",
   "feedbackNotSavedWarning": "Are you sure? Your feedback may not be saved.",
