--- a/i18n/locales/fr-FR/blockly-mooc/turtle.json
+++ b/i18n/locales/fr-FR/blockly-mooc/turtle.json
@@ -1,5 +1,5 @@
 {
-  "backward": "",
+  "backward": "en arrière",
   "blocksUsed": "Blocs utilisés&#160;: 1%",
   "branches": "branches",
   "catColour": "Couleur",
@@ -47,7 +47,7 @@
   "jumpBackward": "saute en arrière de",
   "jumpForward": "saute en avant de",
   "jumpToOverDown": "",
-  "jumpByDirection": "",
+  "jumpByDirection": "saute %1 de %2 pixels",
   "jumpTooltip": "Déplace l'artiste sans laisser aucune trace.",
   "jumpEastTooltip": "Déplace l'artiste vers l'Est sans laisser aucune trace.",
   "jumpNorthTooltip": "Déplace l'artiste vers le Nord sans laisser aucune trace.",
@@ -61,10 +61,10 @@
   "lengthFeedback": "C'est bon sauf pour les longueurs à parcourir.",
   "lengthParameter": "longueur",
   "loopVariable": "compteur",
-  "moveBackward": "",
+  "moveBackward": "reculer",
   "moveEastTooltip": "Déplace l'artiste vers l'Est.",
-  "moveDirectionByPixels": "",
-  "moveForward": "",
+  "moveDirectionByPixels": "déplacer %1 de %2 pixels",
+  "moveForward": "avancer",
   "moveForwardTooltip": "Déplace l'artiste vers l'avant.",
   "moveNorthTooltip": "Déplace l'artiste vers le Nord.",
   "moveNortheastTooltip": "Déplace l'artiste vers le nord-est.",
@@ -94,10 +94,10 @@
   "sizeParameter": "taille",
   "step": "étape",
   "tooFewColours": "Tu dois utiliser au moins 1% de couleurs différentes pour ce puzzle. Tu en as seulement utilisé 2%.",
-  "turnLeft": "",
-  "turnRight": "",
+  "turnLeft": "tourner à gauche",
+  "turnRight": "tourner à droite",
   "turnRightTooltip": "Tourne l'artiste à droite selon l'angle spécifié.",
-  "turnDirection": "",
+  "turnDirection": "tourner %1 de %2 degrés",
   "turnTooltip": "Tourne l'artiste à gauche ou à droite selon le degré indiqué.",
   "turtleVisibilityTooltip": "Rend l'artiste visible ou invisible.",
   "widthTooltip": "Modifie la largeur du crayon.",
