levelbuilder content changes (-ebeastlake)

--- a/dashboard/config/locales/scripts.en.yml
+++ b/dashboard/config/locales/scripts.en.yml
@@ -16929,7 +16929,7 @@ en:
               name: Share Your Voice
           lesson_groups: {}
           name: k5-ai-data-2024
-          title: How AI Makes Predictions
+          title: How AI Makes Decisions
           description_audience: ''
           description_short: ''
           description: ''
