--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -410,6 +410,14 @@
   "childAccountConsentValidPermission": "Permission:",
   "childAccountConsentValidPermissionGranted": "Granted on {date}",
   "childAccountConsentValidMessage": "Thank you for approving your child’s Code.org account! You will receive a confirmation email within 24–48 hours. Please let your child know you’ve approved their account so they can get started learning and coding today!",
+  "childAccountPolicy_consentStatus": "Consent Status",
+  "childAccountPolicy_consentProcessReadMore": "Read more about this consent process and these changes here.",
+  "childAccountPolicy_lockedOut": "Locked Out",
+  "childAccountPolicy_studentParentalConsentStatus": "Student Parental Consent Status",
+  "childAccountPolicy_studentParentalConsentNotice": "The following students will require parental consent by 7/1/2024 to continue using Code.org with their personal account. Please ensure these students provide a parent or guardian email address to complete the parental consent process.",
+  "childAccountPolicy_notStarted": "Not Started",
+  "childAccountPolicy_permissionGranted": "Permission Granted",
+  "childAccountPolicy_requestSent": "Request Sent",
   "childAccountPolicy_CreateSectionsWarning": "If you have students under 13, they may require parental consent to use a personal login. Please go back and use picture password, secret word, or school-managed sections to avoid any interruptions for students under 13.",
   "childAccountPolicy_LearnMore": "Learn more about parental consent",
   "choiceLevel": "Choice level",
@@ -1299,6 +1307,7 @@
   "hashError": "Sorry, '%1' doesn't correspond with any saved program.",
   "help": "Help",
   "helpTips": "Help & Tips",
+  "headsUp": "Heads Up!",
   "hidden": "Hidden",
   "hiddenAssessmentWarning": "Note: This assessment is hidden for this section; unlocking it will not show it to students yet. To unhide, click the 'Visible' button on the lesson's tile.",
   "hiddenScriptTooltip": "Please select a section before trying to toggle whether or not the unit is visible to your students.",
