--- a/i18n/locales/source/dashboard/marketing_announcements.json
+++ b/i18n/locales/source/dashboard/marketing_announcements.json
@@ -14,6 +14,9 @@
       "title": "Introducing Music Lab",
       "body": "Get creative with your favorite artist's music and code new songs and mixes!",
       "buttonText": "Learn more"
+    },
+    "lms-launch": {
+      "buttonText": "Learn more"
     }
   }
 }
