--- a/i18n/locales/source/dashboard/course_offerings.json
+++ b/i18n/locales/source/dashboard/course_offerings.json
@@ -317,6 +317,7 @@
   "gamelabprojects": "gamelabprojects",
   "gen-ai-customizing-draft": "gen-ai-customizing-draft",
   "gen-ai-customizing-pilot-v1": "[Pilot] Customizing Language Models",
+  "gen-ai-customizing-pilot-v2": "[Pilot] Customizing Language Models",
   "gen-ai-foudations-pilot-v1": "[Pilot] Foundations of Generative AI",
   "gen-ai-foundations-draft": "gen-ai-foundations-draft",
   "gen-ai-humanities": "gen-ai-humanities",
@@ -450,6 +451,7 @@
   "sb-pt-exp": "sb-pt-exp",
   "sconyers": "sconyers",
   "seesaw-adaptations": "seesaw-adaptations",
+  "self-paced-foundations-cs": "self-paced-foundations-cs",
   "self-paced-pl-ai-101": "self-paced-pl-ai-101",
   "self-paced-pl-aiml": "Teaching AI and Machine Learning",
   "self-paced-pl-csa": "CSA Getting Started Modules",
