--- a/i18n/locales/source/dashboard/courses.yml
+++ b/i18n/locales/source/dashboard/courses.yml
@@ -747,6 +747,12 @@ en:
           description_student: ''
           description_teacher: ''
           version_title: ''
+        self-paced-foundations-cs-2024:
+          title: Foundations of CS
+          description_short: ''
+          description_student: ''
+          description_teacher: ''
+          version_title: "'24-'25"
     resources:
       curriculum/csd/2017:
         name: Curriculum
