--- a/i18n/locales/source/course_content/other/allthethings.json
+++ b/i18n/locales/source/course_content/other/allthethings.json
@@ -2935,6 +2935,12 @@
   "https://studio.code.org/s/allthethings/lessons/50/levels/2": {
     "long_instructions": "## Python Lab Basics\n\nTry adding some new code."
   },
+  "https://studio.code.org/s/allthethings/lessons/50/levels/3": {
+    "long_instructions": "## Project-backed level\n\nThis level shares a project with level 4 in the progression."
+  },
+  "https://studio.code.org/s/allthethings/lessons/50/levels/4": {
+    "long_instructions": "## Project-backed level\n\nThis level shares a project with level 3 in the progression."
+  },
   "https://studio.code.org/s/allthethings/lessons/51/levels/1": {
     "long_instructions": "Add **html** pages and preview them in the right pane.\n\nAdd **css** pages (and link them to your html).\n\nUse the file browser to add/rename/delete files, or to add/rename/delete folders (including hierarchically!)"
   },
