--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -869,6 +869,10 @@
   "deleteAsset": "Delete {assetType}",
   "deleteAssetConfirm": "Are you sure you want to delete this {assetType}? You cannot undo this action.",
   "deleteConfirm": "Delete?",
+  "deleteFileConfirmation": "test",
+  "deleteFileTitle": "test",
+  "deleteFolderConfirmation": "test",
+  "deleteFolderTitle": "test",
   "deleteGroup": "Delete group",
   "deleteTable": "Delete table",
   "deleteTableConfirm": "Do you really want to delete this entire table? You cannot undo this action.",
