--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -466,6 +466,7 @@
   "codeReviewToggleDisableError": "Error disabling code review. Please try again.",
   "codeToEmbed": "Code that will be embedded.",
   "codeTooltip": "See generated JavaScript code.",
+  "collapseAll": "Collapse all student rows",
   "commentPrefix": "comment:",
   "commentTooltip": "Leave a message for yourself, or anyone else reading your code.",
   "committedVersionLabel": "Commit from {timestamp}",
@@ -1152,6 +1153,7 @@
   "examplesFailedOnClose": "One or more of your examples do not match your definition. Check your examples before closing",
   "exampleSolution": "Example Solution {number}",
   "expand": "Expand",
+  "expandAll": "Expand all student rows",
   "explainCourseAssignmentsLearnMore": " Learn what happens when you assign a course.",
   "explainTtsAutoplay": "For Chrome, Internet Explorer, and Edge browsers only: When this setting is on, level instructions will be automatically read aloud to students using text-to-speech each time they open a level. This makes it easier for students who are not yet fluent readers to complete lessons.",
   "explainTtsAutoplayToolTip": "For Chrome, Internet Explorer, and Edge browsers only: When this setting is on, level instructions will be automatically read aloud to students using text-to-speech each time they open a level. This makes it easier for students who are not yet fluent readers to complete lessons. Not available in all courses.",
